--- a/Blog.Client/Components/Pages/Admin/Components/Profile.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/Profile.razor
@@ -340,7 +340,7 @@
 
     private async Task HandleUpdate()
     {
-        await UserClient.UpdateUserInfo(UpdateInfo);
+        await UserClient.Update(UpdateInfo);
         var userinfo = await UserClient.GetUserInfo();
         if (userinfo.Value is not null)
             UserInfo = userinfo.Value;
