--- a/Blog.Client/Components/_Imports.razor
+++ b/Blog.Client/Components/_Imports.razor
@@ -44,7 +44,7 @@
 @using static BlogApi.Domain.Enums.EntityEnum
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Blog.Application.Request.Tag
-
+@using Blog.Application.Queries.User.Get
 
 
 
